--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nunes Sports</title>
 </head>
 <body>
-    
+    <div>
+        <form action="/produto" method="get">
+            <button type="submit">Exibir Produtos</button>
+        </form>
+    </div>
 </body>
 </html>
