--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<% for (var i = 0; i < data.length; i++) { %>
+    <tr>
+        <td><%= data[i].id %></td>
+        <td><%= data[i].nome %></td>
+        <td><%= data[i].descricao %></td>
+        <td><%= data[i].preco %></td>
+    </tr>
+<% } %>
