--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,22 +9,22 @@
 <body>
 
     <div>
-        <form action="<%= action %>" method="post">
+        <form action="/produto" method="post">
             <div>
                 <label for="id-reg">ID</label>
-                <input type="text" name="id" id="id-reg" value="<%= data2.id %>">
+                <input type="text" name="id" id="id-reg" value="">
             </div>
             <div>
                 <label for="nome-reg">Nome</label>
-                <input type="text" name="nome" id="nome-reg" value="<%= data2.nome %>">
+                <input type="text" name="nome" id="nome-reg" value="">
             </div>
             <div>
                 <label for="descricao-reg">Descirção</label>
-                <input type="text" name="descricao" id="descricao-reg" value="<%= data2.descricao %>">
+                <input type="text" name="descricao" id="descricao-reg" value="">
             </div>
             <div>
                 <label for="preco-reg">Preço</label>
-                <input type="text" name="preco" id="preco-reg" value="<%= data2.preco %>">
+                <input type="text" name="preco" id="preco-reg" value="">
             </div>
 
             <button type="submit">Enviar</button>
@@ -38,13 +38,13 @@
             <tr>
                 <th>id</th><th>Nome</th><th>Descirção</th><th>Preço</th><th>Ações</th>
             </tr>
-            <% for (var i = 0; i < data1.length; i++) { %>
+            <% for (var i = 0; i < data.length; i++) { %>
                 <tr>
                     <form action="/produto" method="get">
-                        <td><input type="text" name="id" value="<%= data1[i].id %>"</td>
-                        <td><%= data1[i].nome %></td>
-                        <td><%= data1[i].descricao %></td>
-                        <td><%= data1[i].preco %></td>
+                        <td><input type="text" name="id" value="<%= data[i].id %>"</td>
+                        <td><%= data[i].nome %></td>
+                        <td><%= data[i].descricao %></td>
+                        <td><%= data[i].preco %></td>
                         <td><button type="submit">Editar</button></td>
                         <td><button type="submit">Excluir</button></td>
                     </form>
