--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,13 +6,12 @@
     <title>Nunes Sports</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="/script.js"></script>
 </head>
 
 <body>
 
     <div>
-        <form action="/produto" method="post">
+        <form>
             <div>
                 <label for="id-reg">ID</label>
                 <input type="text" name="id" id="id-reg" value="">
@@ -30,7 +29,8 @@
                 <input type="text" name="preco" id="preco-reg" value="">
             </div>
 
-            <button type="submit">Enviar</button>
+            <button type="button" id="create-button" style="visibility: visible;">Enviar</button>
+            <button type="button" id="update-button" style="visibility: visible;">Salvar</button>
             <button type="reset">Limpar</button>
 
         </form>
@@ -39,21 +39,24 @@
     <div>
         <table>
             <tr>
-                <th>id</th><th>Nome</th><th>Descirção</th><th>Preço</th><th>Ações</th>
+                <th></th><th>Nome</th><th>Descirção</th><th>Preço</th><th>Ações</th>
             </tr>
             <% for (var i = 0; i < data.length; i++) { %>
-                <tr>
+                <tr id="<%='tr-id-' + i %>">
                     <form action="/produto" method="get">
-                        <td><input type="text" name="id" value="<%= data[i].id %>"</td>
-                        <td><%= data[i].nome %></td>
-                        <td><%= data[i].descricao %></td>
-                        <td><%= data[i].preco %></td>
-                        <td><button type="submit">Editar</button></td>
-                        <td><button type="submit">Excluir</button></td>
+                        <td id="<%= 'td-id-' + i %>" name="td-id" value="<%= i %>"></td>
+                        <td id="<%= 'nome-id-' + i %>" name="td-nome"><%= data[i].nome %></td>
+                        <td id="<%= 'desc-id-' + i %>" name="td-desc"><%= data[i].descricao %></td>
+                        <td id="<%= 'preco-id-' + i %>" name="td-preco"><%= data[i].preco %></td>
+                        <td><button type="button" id="<%= 'edit-btn-' + i %>" name="edit-btn">Editar</button></td>
+                        <td><button type="button" id="<%= 'delete-btn-' + i%>" name="delete-btn">Excluir</button></td>
                     </form>
                 </tr>
             <% } %>
         </table>
     </div>
+    
+    <script type="text/javascript" src="/script.js"></script>
+
 </body>
 </html>
